@@ -1,3 +1,9 @@
+2011-10-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* support/regression/collate-results.py,
+	  support/regression/compact-results.py: fixed bug #3413437
+
+
 2011-10-15 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
